# scb_ai_refactor

./: .gitignore  COACH_ASSIGNMENT_SYSTEM.md  DEPLOYMENT.md  ENV_SETUP.md  INTERACTIVE_DASHBOARD_GUIDE.md  MIGRATION_SUCCESS.md  PHASE2_COMPLETE.md  RAG_CHATBOT_ANALYZA.md  README.md  README_HYBRID_RAG.md  README_PHASE2.md  T1.md  all_code.txt  backup_script.py  check_data.py  count.py  create_sample_data.py  debug_coaching.py  debug_dashboard_fixes.py  diagnose_data.py  final_test.py  fix_client_assignment.py  fix_coach_assignment.py  migrate_to_postgres.py  new_surveys_function.py  pyproject.toml  run_tunnel.py  set_admin_password.py  setup_brona_coach.py  suropen_simple.py  temp_cashflow_fix.py  test_all_dashboard_components.py  test_cashflow.py  test_chart_data.py  test_charts_api.py  test_coach_assignment.py  test_coaching_system.py  test_dashboard_fixes.py  test_dashboard_integration.py  test_dashboard_table.py  (+2 more)
.github/: copilot-instructions.md
accounts/: admin.py  api_views.py  forms.py  middleware.py  models.py  permissions.py  signals.py  urls.py  views.py
app/: admin.py  settings.py  urls.py  views.py
chatbot/: debug_views.py  models.py  test_views.py  urls.py  views.py  views_rag.py
coaching/: admin.py  models.py  urls.py  views.py
dashboard/: cashflow.py  debug_views.py  tests.py  urls.py  views.py  views_cashflow.py
docs/: .gitignore  COACH_UNASSIGNED_IMPLEMENTATION.md  CONVERSATION_SUMMARY_COACHMODULE.md  DEPLOY_TO_PYTHONANYWHERE.md  PHASE2_PROGRESS.md  POSTGRESQL_MIGRATION_GUIDE.md  RAG_HYBRID_PROCESSING.md  cashflow_fix_2024.md
ingest/: apps.py  (+8 more)
(+191 files in other folders)
