[tool.poetry]
name = "finapp"
version = "0.1.0"
description = "Financial analysis app with OpenAI integration"
authors = ["Bronislav Klus <you@example.com>"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
# ⚠️ Python jen 3.13 až <4.0
python = ">=3.13,<4"

django = "^5.2"
reportlab = "^4.4"
pillow = "^10.0"
pdfplumber = "^0.11"
python-dotenv = "^1.1.1"
openai = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
